style(eslint): fix all eslint errors
